--- a/ackno.html
+++ b/ackno.html
@@ -18,6 +18,7 @@
       
     <!-- Include JQuery-->
     <script src="js/jquery1.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <!-- main Javascript-->
     <script src="js/mainjs.js"></script>
       <script src="js/ackno.js"></script>
