--- a/music.html
+++ b/music.html
@@ -65,10 +65,10 @@
   </nav>
 
     <br><br/>
-      <p align="center" >
-          <div class="container">
-      <img src="images/c2.JPG" style="display: inline-block" height="450em" width="550em ">
-        </div>
+      <p class="pull-left" >
+      <img src="images/c2.JPG" style="display: inline-block" height="" width="100%"> <br>
+        <h1 class="media-heading">Under Construction!!</h1>
+          <h2 ></h2>
       </p>
     </body>
 </html>
