--- a/poems.html
+++ b/poems.html
@@ -132,7 +132,7 @@ Till this wonder comes to an end!!! <br/> <br/>
                 <div id="poem2" class="panel-heading">
                      <div class="media">
     <a class="pull-left" href="#">
-      <img class="media-object img-circle" src="images/mother_and_baby.jpg" alt="...">
+      <img class="media-object img-circle" src="images/love_ me_ mom_ blog.jpeg" alt="...">
     </a>
   <div class="media-body">
       <h2 class="media-heading"><br /><i>Will you love me mom?<h5>by Suruchi Chopra</h5></i></h2>
