Added new articles and poems

--- a/articles.html
+++ b/articles.html
@@ -73,8 +73,123 @@
       <div class="container">
       <div class="row">
           <div class="col-md-8">
+
+              <div class="panel panel-default">
+                  <div id="poem1" class="panel-heading">
+                      <div class="media">
+                          <a class="pull-left" href="#">
+                              <img class="media-object img-circle" src="images/aware%20of%20the%20mind%20image%20blog.jpg" alt="...">
+                          </a>
+                          <div class="media-body">
+                              <h2 class="media-heading"><br /><i>A Tribute to Parents<h5>by Suruchi Chopra</h5></i></h2>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="panel-body">
+                      <p class="animated fadeIn" style="font-family:Segoe Print;font-weight:110;font-size:100%;"> <br/>
+
+                          What this world has come to be? <br>
+                          I see the wrinkled old lady, <br>
+                          Barely walk with the stick supporting her fragile body, <br>
+                          Ahead of her, I see the beautiful maiden in her thirties, <br>
+                          Walking hand in hand with her Man, <br>
+                          The man being the son of  the old woman. <br>
+                          What this world has come to be? <br>
+                          I see the son fight with his father,<br>
+                           The son demanded the pricy gadget, <br>
+                          The old man bought him chocolates rather, <br>
+                          The son then blackmailed the grief stricken mother, <br>
+                          To leave the house of the poor farmer, <br>
+                          What this world has come to be? <br><br>
+
+                          Apni Zubaan Ki Tezi Unke Lye Istemaal Mat Karo <br>
+                          Jisne Tumhein Bolna Sikhaya <br>
+                          Apni Kabiliyat Ka Muzahira Us Par Na Karo <br>
+                          Jisne Tumko Raasta Dikhaya <br> <br>
+
+                          It goes without saying that these lines are dedicated to our parents who have devoted their lives for our betterment.
+                          Let us spare our precious time to go back the memory lane today. The almighty entrusted our mother with His plan of bringing us into this world. A human body can bear only 45 del of pain, she had to bear 57 del of pain to just hold you in her hands. In other words, we gave her the immense pain of 20 bones breaking at a time, do we have the right to give any more? She will never complain about her suffering for we were her greatest happiness and blessing. Let us question ourselves today , is our life truly worth that pain? The sparkle in a father’s eyes when he holds his baby in his hands for the first time is unmatched and unfathomable. As a little toddler, she carried us in her tender arms, ran after us for food and sang lullaby to make us sleep. How  many of us today truly care to ask her if she has eaten or not?
+                          When we were busy showing tantrums at home, our father had to tolerate the tantrums of his boss.
+                          He worked day and night to earn us a livelihood and give us a better life. Remember, whenever we had asked for an expensive gift, he might have procrastinated but never mentioned the lack of money.
+                          What proportion of our heavy salary do we intend to spare for the person who spent his entire earnings on us?
+                          The selfless love and care when we had fallen ill still makes me have goose bumps. I can never forget the glow on their faces when I won accolades, ranging for reciting a poem flawlessly as a child to getting praised for my talents to obtaining good grades to making it to my dream job.
+                          Respect will be an understatement when we talk about the people who can take a bullet for us, our parents. As we grow up, we tend to forget their immeasurable sacrifices and unconditional love. As we obtain education, we try to impose our so called knowledge on the people who were our first teachers! It is certainly possible that our ideologies don’t match, however this does not reduce their value as a parent and gives us no right to behave in in inappropriate manner with the people whose entire lives revolve around our well being. It is utterly disgraceful on our part to ignore and disrespect the people who made us what we are today.
+                          If their sacrifices are not enough to stir us from within whenever we show any signs of disrespect towards them, I don’t know what will be!
+                          I would like to end by pronouncing a verse from the holy Bible <br>
+                          The eye [that] mocketh at [his] father, and despiseth to obey [his] mother, the ravens of the valley shall pick it out, and the young eagles shall eat it.
+                          No good shall befall us if we disrespect the very people who gave us birth! <br>
+                          Let us pledge to prioritize their happiness above all for they deserve it all!!!!
+
+
+
+
+                      </p>
+                  </div>
+              </div>
+
+
+              <div class="panel panel-default">
+                  <div id="poem2" class="panel-heading">
+                      <div class="media">
+                          <a class="pull-left" href="#">
+                              <img class="media-object img-circle" src="images/aware%20of%20the%20mind%20image%20blog.jpg" alt="...">
+                          </a>
+                          <div class="media-body">
+                              <h2 class="media-heading"><br /><i>DEMONETISATION: AN OVERVIEW<h5>by Suruchi Chopra</h5></i></h2>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="panel-body">
+                      <p class="animated fadeIn" style="font-family:Segoe Print;font-weight:110;font-size:100%;"> <br/>
+
+                          On the stroke of midnight hour on 8th November 2016, the citizen of the country closed his eyes with a strange yet profound feeling of responsibility, for, he was provided with a lifetime opportunity to take the marshal in his hand and guide the nation forward towards Change. Prime Minister Narendra Modi launched a surgical strike on black money by scrapping all the 500 and 1000 rupee notes from 12 AM 9 November onwards. In his words, a time comes in every citizen’s life when he has to participate in the decisions of national interest. The historic decision left some people in awe and others in fear, some people in confidence and others in apprehension, some in responsibility and others in accountability! <br> <br>
+
+                          Black money can be classified into two types, one which has been earned by illegal means and the other which is unaccounted or untaxed wealth. Undoubtedly, this has been an unimaginable setback to the funding of terror networks. Terrorism, especially cross border terror, has been very active in the recent past. The move has targeted its very roots! The exponentially reduced instances of stone pelting in the Kashmir valley which were financed by putting a Rs 500 note in the pockets of the accused is the added proof. The use of counterfeit currency, hawala transactions, terror; the world of the underworld has come to a standstill. While the underworld is the hoarder of such currency, there are enumerable visible people with sacks of such money kept invisible from the world. These people have been residing in the most lavish houses, enjoying the most luxurious services, vacationing at most well off places, sending their children to top notch universities and living off the taxes of the honest citizens of the country, without even paying a single penny of tax from their overflowing pockets. As the government records go, these poorest of the poor have not yet achieved the taxable revenue mark! The announcement left such people off their comfortable sofas and concomitantly made the honest Indian rise in his stature. The move has also proven to be beneficial in the economic interest of the nation. Crores of money has come into the banking system since the initiation of this step. This will fill the government coffers with tax revenues and save the cost of interest on borrowed money. Moreover , the digital transactions have increased from 20% to about 40% owing to a shortage of cash. A cashless economy is far more developed and progressive than an economy which largely depends on currency. <br> <br>
+
+                          On the other side of the coin are the implications, some very severe, faced by the majority of hardworking and honest citizens. When 85% of the currency is suddenly lifted off the market, a situation of cash crunch is natural and expected. However, some mismanagement on the government part in replenishing the currency through exchange and deposits had led to many people standing in the queues for long hours outside banks and ATM’s and still not getting new currency. The poverty stricken people, who are far away from this menace of black money ran out of cash for food and basic amenities. Also, it is being said that the big fishes have found their way out. People indulged in the practice of converting their black money into white by buying gold, involving money exchangers, using Jandhan accounts to park their funds, etc. Although the government is looking into such cases and passing the relevant legislations, the success rate in finding such people is minimal. Also the launch of the Rs 2000 note has raised apprehensions for accumulation of black money in the future. This move has attacked the current stacks but in no way puts a curb on ways of hoarding the black wealth in the future. <br> <br>
+
+                          It was a time when every Indian silently shared the pain. As it is said good intentions lead to great results, intension of every honest citizen strikes a chord today, results are awaited!
+
+
+                      </p>
+                  </div>
+              </div>
+
+
+              <div class="panel panel-default">
+                  <div id="poem3" class="panel-heading">
+                      <div class="media">
+                          <a class="pull-left" href="#">
+                              <img class="media-object img-circle" src="images/aware%20of%20the%20mind%20image%20blog.jpg" alt="...">
+                          </a>
+                          <div class="media-body">
+                              <h2 class="media-heading"><br /><i>Haiderpur Experience<h5>by Suruchi Chopra</h5></i></h2>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="panel-body">
+                      <p class="animated fadeIn" style="font-family:Segoe Print;font-weight:110;font-size:100%;"> <br/>
+                          As I walked past the narrow, somewhat dingy and dirty lanes with closely and chaotically built houses, one street leading to another, dodging the curious eyes of gazing residents, street vendors, amidst noises of barking dogs and me-ing goats and people scuffling and shouting so effortlessly; all the plans and expectations that I had so excitedly carried in my head on my first day of internship shattered like a broken glass! I was utterly ‘perplexed’. Have I chosen the right pillar? “Didi, aap yahan padane aaye ho?”, the sweet hesitant voice of a girl made me snap out of my apprehensions. Muskaan, a girl in her early teens, was my first friend in the slum.” Didi, aap aaj se hi padaoge? Mai copy lekar aa jaun?”  Her enthusiasm was infectious. She showed me the first ray of hope and reason that day and four months down the line, I am surrounded with so many little stars who shine and sparkle in the darkness that surrounds them! <br/><br/>
+
+                          The learning process had started much before the teaching sessions. The internship training is the first gear up for the’ battlefield’.  I never realized it took so much to teach kids until I saw those little bundle of joys, laughing, playing, jumping and pouncing on each other and us; Betrayed by destiny but saved by ignorance. But how long will ignorance play its part? Will these kids, like many others, be given the burdensome responsibility of earning bread at such tender age?  Will these innocent hearts be able to handle the harsh truth of their lives? What about those dreams of becoming a dancer, singer, pilot, police officer?  Can we let their dreams blur into a bleak future? NO, we simply cannot. And with this came a sense of great responsibility. I had never felt so responsible, not even for my own self! <br><br>
+
+                          The feeling of immense satisfaction when the kid actually understands and comprehends what we teach is the hardest to express. I remember the unusual ecstasy we all had felt when the kids greeted us with a “Good evening didi! How are you?”, when they all started coming to the school well groomed, when they cleaned the place with us by bringing the jhadoos and buckets from their homes, when Sheetal topped in her maths test, when Kajal and Karan spelled perfectly in the English class, when Abhishek won the first prize in the dance competition, when Saurabh finally solved a question by himself! Huff, I can go on and on. <br> <br>
+
+                          I draw a large part of my inspiration from the parents who in no way want their child to earn by the means that they are forced to follow. They have dreams, dreams that surpass their reality! “Didi, ye pad jayega to hamare jaise bartan nahi dhone padenge”; I clearly remember the helplessness in a mother’s eyes when she asked me to not to spare a rod while teaching her child. This followed a sleepless night and a realization of how big my role was. I cannot let my student go and wash utensils in other’s homes just because he was deprived of the same education that the children of his age so easily acquire. <br> <br>
+
+                          There are so many takeaways from this so short yet so substantial period of my life. I made them study, they made me smile; I taught them perseverance, they taught me patience (sometimes tested it too!); I worked on their intelligence, they worked on my innocence; I shared knowledge, they shared imagination; I gave them time, they made it precious! <br> <br>
+
+                          In addition to my shining stars, I have made friends for a lifetime. The ‘slumies’, we seldom call ourselves. We were each other’s entertaining, motivational, emotional, supportive, fighting, gossiping, cribbing, counterparts since past four months. From a serious meeting to the most non-sense discussions, from soulful guitar to the break up song, from the whatsapp groups to the movie plans, from  fighting to laughing it out, from cafes to the street foods, from birthday surprises to the exam shocks ,from long drives to the Bangalore trip-We have had it all , together!
+                          While I write this today, I still feel that no words can ever do justice to the extraordinary experience I have had during the internship. We made mistakes but corrected, we faced challenges but overcame, we were criticized but improved, we taught but learnt! The path was not an easy one but definitely worth it!
+                          The seed of knowledge has been sown. Let us all join together to play a fortunate part in its journey of growing into a fulfilling tree!
+
+
+                      </p>
+                  </div>
+              </div>
+
            <div class="panel panel-default">
-                <div id="poem1" class="panel-heading">
+                <div id="poem4" class="panel-heading">
                    <div class="media">
     <a class="pull-left" href="#">
       <img class="media-object img-circle" src="images/aware%20of%20the%20mind%20image%20blog.jpg" alt="...">
@@ -109,7 +224,10 @@ For as far as life is concerned, intellect is required to make it while a waveri
   <a href="#" class="list-group-item active">
     Articles
   </a>
-  <a href="#poem1" class="list-group-item">Be aware of the mind</a>
+              <a href="#poem1" class="list-group-item">A Tribute to Parents</a>
+              <a href="#poem2" class="list-group-item">DEMONETISATION: AN OVERVIEW</a>
+              <a href="#poem3" class="list-group-item">Haiderpur Experience</a>
+  <a href="#poem4" class="list-group-item">Be aware of the mind</a>
 </div>
                <div class="list-group">
   <a href="poems.html" class="list-group-item active">
